Experimenting with sharing the rendering logic between GDB and LLDB

--- a/example-project/CMakeLists.txt
+++ b/example-project/CMakeLists.txt
@@ -9,8 +9,7 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
 set(CMAKE_FIND_DEBUG_MODE FALSE)
-find_package(QT NAMES Qt6 CONFIG COMPONENTS Widgets Network Gui Test REQUIRED)
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets Network Gui Test REQUIRED)
+find_package(Qt6 CONFIG COMPONENTS Widgets Network Gui Test REQUIRED)
 
 qt_add_executable(QTTypesExample main.cpp)
 target_link_libraries(QTTypesExample PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Network Qt${QT_VERSION_MAJOR}::Gui)
