--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "org.jetbrains.intellij" version "1.9.0"
+    id "org.jetbrains.intellij" version "1.15.0"
     id "java"
 }
 
@@ -19,6 +19,7 @@ intellij {
     version = "2021.3.1"
     type = "CL"
     plugins = ["com.intellij.cidr.base", "com.intellij.clion"]
+    targetCompatibility = 11
 }
 
 patchPluginXml {
